# silly-blog

./: .gitignore  .gitmodules  Dockerfile  README.md  database.sql  docker-compose.yml  dropdatabase.sql
blog_android_app/: settings.gradle.kts
blog_android_app/app/: build.gradle.kts
blog_android_app/app/src/main/: AndroidManifest.xml
blog_android_app/app/src/main/res/color/: nav_item_colors.xml
blog_android_app/app/src/main/res/drawable/: add_circle.xml  attach.xml  check.xml  clock.xml  (+10 more)
blog_android_app/gradle/: libs.versions.toml
blog_android_app/gradle/wrapper/: gradle-wrapper.properties
blog_backend/: CMakeLists.txt  Dockerfile  apidocs.md  config.json  main.cc  main.cpp
blog_backend/controllers/: CommentController.cc  CommentController.h  ImageController.cc  ImageController.h  LikeController.cc  LikeController.h  PostController.cc  PostController.cpp  PostController.h  SimpleController.cpp  SimpleController.h  UserController.cc  UserController.h
blog_backend/filters/: CommentRightFilter.cc  CommentRightFilter.h  LoginFilter.cc  LoginFilter.h  PostRightFilter.cc  PostRightFilter.h  RightFilter.cc  RightFilter.h
blog_backend/local_config/: config.json
blog_backend/models/: Comment.cc  Comment.h  Image.cc  Image.h  Like.cc  Like.h  Post.cc  Post.h  User.cc  User.h  model.json
blog_backend/test/: CMakeLists.txt  test_main.cc
blog_backend/utils/: httpservice.cc  httpservice.h  jwtservice.cc  jwtservice.h  parseservice.h
generate_queries/: main.py
generate_queries/.qtcreator/Python_3_12_3venv/: pyvenv.cfg
generate_queries/env/: pyvenv.cfg
(+78 files in other folders)
